--- a/2023.md
+++ b/2023.md
@@ -1,4 +1,25 @@
 # 2023
+* **ControlNet** (**ControlNet**)
+  * title and link: [Adding Conditional Control to Text-to-Image Diffusion Models](https://arxiv.org/abs/2302.05543)
+  * information: ICCV 2023 best paper Stanford
+  * problem and position: add spatial conditioning controls to pretrained text2image diffusion models
+  * method overview: additional branch initialized with zeros finetuning
+  * teaser: 
+    ![ControlNet_teaser](2023/../assets/2023/ControlNet_teaser.png)
+  * results: 
+    ![ControlNet_result1](assets/2023/ControlNet_result1.png)
+    ![ControlNet_result2](assets/2023/ControlNet_result2.png)
+    ![ControlNet_result3](assets/2023/ControlNet_result3.png)
+  * method details: 
+    ![ControlNet_method1](assets/2023/ControlNet_method1.png)
+    ![ControlNet_method2](assets/2023/ControlNet_method2.png)
+    * experiment on Stable Diffusion
+    * since Stable Diffusion works on $64 \times 64$ latent domain, so also convert condition $c$ into $64 \times 64$ size by a tiny network
+      ![ControlNet_method3](assets/2023/ControlNet_method3.png)
+    * during finetuning, randomly 50% remove text prompt to improve semantics ability on conditions
+    * finding: sudden convergence phenomenon
+      ![ControlNet_method4](assets/2023/ControlNet_method4.png)
+
 * **Watermark for Large Language Models** (**LLMWatermark**)
   * title and link: [A Watermark for Large Language Models](https://arxiv.org/abs/2301.10226)
   * information: ICML 2023 outstanding paper
