Add CoRL and ACM MM 2023, additional RSS 2023

--- a/2023.md
+++ b/2023.md
@@ -1,4 +1,73 @@
 # 2023
+* **Combinatorial-dependence Audio-queried TransformeR** (**CATR**)
+  * title and link: [CATR: Combinatorial-Dependence Audio-Queried Transformer for Audio-Visual Video Segmentation](https://arxiv.org/abs/2309.09709)
+  * information: ACM MM 2023 best paper ZJU
+  * problem and position: deal with Audio-Visual Video Segmentation (AVVS)’s 2 limitations
+  * method overview: combinatorial-dependence fusion with decoupled audio-visual transformer encoding and block-wise encoded gate, and object-aware audio-queried decoding
+  * teaser: 
+    ![CATR_teaser](assets/2023/CATR_teaser.png)
+  * results: 
+    ![CATR_result1](assets/2023/CATR_result1.png)![CATR_result2](assets/2023/CATR_result2.png)
+    ![CATR_result3](assets/2023/CATR_result3.png)
+  * method details: 
+    * Decoupled Audio-Visual Transformer (DAVT) encoding
+      * visual and audio features separately: $F_v^l \in R^{T\times H\times W\times C}$ and $F_a^l \in R^{T\times d}$
+      * first visual extraction by ResNet-50 or PVT-v2 and atrous spatial pyramid pooling, first audio extraction by VGGish pretrained on AudioSet
+      * then spatial fusion by concatenating audio and visual features and self-attention on the mixed feature as $(H \times W + 1) \times D$
+      * then temporal A-V and V-A fusion by multi-head attention alternating KQV as audio and visual features, merge by addition and only visual features are used for decoding
+        ![CATR_method1](assets/2023/CATR_method1.png)![CATR_method2](assets/2023/CATR_method2.png)
+      * but spatial audio-visual fusion already mixes audio and visual features, why additional temporal fusions?
+      * and inserted blockwise-encoded gate to propagate weighted features across different blocks
+        ![CATR_method3](assets/2023/CATR_method3.png)
+    * Audio-Queried Decoding
+      * $N$ learnable queries $Q \in R^{N\times T\times C}$, embedding with audio features
+      * visual features by FPN as $F_{seg} \in R^{T \times H/8 \times W/8 \times C}$
+      * dynamic kernel generates segmentation $M \in R^{T \times N \times H/8 \times W/8}$
+    ![CATR_method4](assets/2023/CATR_method4.png)
+
+* **Feature Fields for Robotic Manipulation** (**F3RM**)
+  * title and link: [Distilled Feature Fields Enable Few-Shot Language-Guided Manipulation](https://arxiv.org/abs/2308.07931)
+  * information: CoRL 2023 best paper MIT
+  * problem and position: few-shot and language-guided and open-ended grasping
+  * method overview: NeRF learns CLIP features from 2D to 3D, use these features to find similar grasp poses from demonstrations or languages
+  * teaser: 
+    ![F3RM_teaser](assets/2023/F3RM_teaser.png)
+  * results: 
+    ![F3RM_result1](assets/2023/F3RM_result1.png)![F3RM_result2](assets/2023/F3RM_result2.png)
+  * method details: 
+    * Distilled Feature Fields modify NeRF by additional feature output $f_{vis}$, supervised by 2D feature from patch-level MaskCLIP, each task instance train individually
+    * demonstrations/dataset include the target grasp pose $T$, represent the target grasp pose as the average feature of sampled points around the grasp pose $Z_M$, each task category owns one
+    * when inference for a new task instance, grasp pose is selected by choosing the discrete voxel having the feature $f_{\alpha}(v)$ most cosine similarity with $Z_M$ of the task category as translation, rotation by optimizing sampled rotations to minimize $z_T$ cos similarity with $Z_M$
+    ![F3RM_method1](assets/2023/F3RM_method1.png)
+    * for language-guided, the new task instance can have novel but similar object beyond the task category
+    * when inference for language-guided, first retrieve demonstrations $z_i$ similar to the query text embedding $q$, then grasp pose is selected by choosing the discrete voxel having the feature $f_{\alpha}(v)$ most cosine similarity with $q$ as translation, rotation by optimizing sampled rotations to minimize $z_T$ cos similarity with $Z_M$ and also $z_i$
+    ![F3RM_method2](assets/2023/F3RM_method2.png)
+
+* **RoboCook** (**RoboCook**)
+  * title and link: [RoboCook: Long-Horizon Elasto-Plastic Object Manipulation with Diverse Tools](https://arxiv.org/abs/2306.14447)
+  * information: CoRL 2023 best systems paper Stanford (Huazhe Xu, Jiajun Wu)
+  * problem and position: robot uses tools to manipulate deformable object like making dumplings and alphabet letter cookies
+  * method overview: a little bit trivial, GNN models point cloud dynamics model, PointNet++ predicts tool selection and policy action and closed-loop control
+  * teaser: 
+    ![RoboCook_teaser](assets/2023/RoboCook_teaser.png)
+  * results: not standard benchmark, self comparison
+  * method details: 
+    * perception
+      * merge RGBD point clouds from 4 cameras and crop the region of interest
+      * color segmentation to extract dough points
+      * surface reconstruction to a watertight mesh
+      * use reconstructed mesh’s SDF to sample dough inner points
+      * use tool’s gt mesh to sample tool surface points
+    * dynamics model
+      * GNN predicts future states of points based on the current states and action
+      * vertex as point with its position and attribute
+    ![RoboCook_method1](assets/2023/RoboCook_method1.png)
+    * closed-loop control
+      * PointNet++ based tool classification
+      * PointNet++ based policy network, dataset synthesized by GNN dynamics model
+      * closed-loop control with visual feedback
+    ![RoboCook_method2](assets/2023/RoboCook_method2.png)
+
 * **ControlNet** (**ControlNet**)
   * title and link: [Adding Conditional Control to Text-to-Image Diffusion Models](https://arxiv.org/abs/2302.05543)
   * information: ICCV 2023 best paper Stanford
@@ -58,6 +127,28 @@
   * information: RSS 2023 best paper
   * problem and position: ergodic search with minimum time needed
   * method overview: optimization on time with ergodic inequality constraint, *I cannot understand*
+
+* **FurnitureBench** (**FurnitureBench**)
+  * title and link: [FurnitureBench: Reproducible Real-World Benchmark for Long-Horizon Complex Manipulation](https://arxiv.org/abs/2305.12821)
+  * information: RSS 2023 best system paper KAIST
+  * problem and position: real-world furniture assembly benchmark
+  * method overview: common setup, reproducible furniture models, easy-to-use robot control software, large teleoperation demonstration dataset, simulated environment
+  * teaser: 
+    ![FurnitureBench_teaser](assets/2023/FurnitureBench_teaser.png)
+  * results: BC and RL perform bad
+    ![FurnitureBench_result](assets/2023/FurnitureBench_result.png)
+  * method details: 
+    * furniture assembly is long-horizon and complex, unlike pick-and-place
+      ![FurnitureBench_result](assets/2023/FurnitureBench_method1.png)
+    * common system setup and 8 reproducible 3D printed furniture models
+      ![FurnitureBench_method2](assets/2023/FurnitureBench_method2.png)![FurnitureBench_method3](assets/2023/FurnitureBench_method3.png)
+    * observation includes RGB images by front camera and wrist camera and proprioceptive robot states
+    * easy-to-use robot control software by python and docker
+    * 5100 overall 219.6 hours VR teleoperation demonstration dataset
+      ![FurnitureBench_method4](assets/2023/FurnitureBench_method4.png)
+    * FurnitureSim: built upon IssacGym and Factory
+      ![FurnitureBench_method5](assets/2023/FurnitureBench_method5.png)
+    * evaluate BC with ResNet-18 encoder and IQL with R3M features
 
 * **3D Gaussian Splatting** (**3DGaussianSplatting**)
   * title and link: [3D Gaussian Splatting for Real-Time Radiance Field Rendering](https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/3d_gaussian_splatting_low.pdf)
