--- a/2023.md
+++ b/2023.md
@@ -1,4 +1,12 @@
 # 2023
+* **Emergent Abilities as a Mirage** (**EAM**)
+  * title and link: [Are Emergent Abilities of Large Language Models a Mirage?](https://arxiv.org/abs/2304.15004)
+  * information: NeurIPS 2023 outstanding paper Stanford
+  * problem and position: analysis on the emergent abilities of LLMs
+  * method overview: simple theoretical derivation using neural scaling laws and empirical experiments using different metrics
+  * results: researcher choosing a metric that nonlinearly or discontinuously deforms per-token rates causes seemingly the emergent abilities, rather than fundamental changes in model behavior with scale
+    ![EAM_result](assets/2023/EAM_result.png)
+
 * **Combinatorial-dependence Audio-queried TransformeR** (**CATR**)
   * title and link: [CATR: Combinatorial-Dependence Audio-Queried Transformer for Audio-Visual Video Segmentation](https://arxiv.org/abs/2309.09709)
   * information: ACM MM 2023 best paper ZJU
@@ -67,6 +75,16 @@
       * PointNet++ based policy network, dataset synthesized by GNN dynamics model
       * closed-loop control with visual feedback
     ![RoboCook_method2](assets/2023/RoboCook_method2.png)
+
+* **Power Line Inspection with Drones** (**PLIDrones**)
+  * title and link: [Autonomous Power Line Inspection with Drones via Perception-Aware MPC](https://arxiv.org/abs/2304.00959)
+  * information: IROS 2023 best paper
+  * problem and position: autonomous power line inspection with drones
+  * method overview: MPC with two objectives, one as power line tracking using YOLO and the other as obstacle detection using U-V Disparity Maps
+  * teaser: 
+    ![PLIDrones_teaser](assets/2023/PLIDrones_teaser.png)
+  * results: 
+    ![PLIDrones_result](assets/2023/PLIDrones_result.png)
 
 * **ControlNet** (**ControlNet**)
   * title and link: [Adding Conditional Control to Text-to-Image Diffusion Models](https://arxiv.org/abs/2302.05543)
