--- a/2024.md
+++ b/2024.md
@@ -24,3 +24,20 @@
     ![RT-X_teaser](assets/2024/RT-X_teaser.png)
   * results: 
     ![RT-X_result](assets/2024/RT-X_result.png)
+
+* **Universal Simulator** (**UniSim**)
+  * title and link: [Learning Interactive Real-World Simulators](https://arxiv.org/abs/2310.06114)
+  * information: ICLR 2024 outstanding paper UCBerkeley (Pieter Abbeel)
+  * problem and position: action-conditioned video prediction enables robot learning
+  * method overview: accept language, motor action, camera motions as actions, then action-conditioned video diffusion model
+  * teaser: 
+    ![UniSim_teaser](assets/2024/UniSim_teaser.png)
+  * results: used for high-level VLM policy and low-level RL policy training
+  * method details: 
+    * different video datasets cover different information
+      ![UniSim_method](assets/2024/UniSim_method.png)
+    * texts by T5 language embedding, motor actions, camera motions
+    * video 3D UNet diffusion model predicts next frames conditioned on observed frames and actions autoregressively
+    * action-condition by classifier-free guidance
+    * 5.6B parameters
+    * experiment PaLM-E image-goal conditioned VLM policy and PaLI VLA policy with learned reward function for block rearrangement on 10k generated videos
