--- a/2024.md
+++ b/2024.md
@@ -1,4 +1,30 @@
 # 2024
+* **Universal Manipulation Interface** (**UMI**)
+  * title and link: [Universal Manipulation Interface: In-The-Wild Robot Teaching Without In-The-Wild Robots](https://arxiv.org/abs/2402.10329)
+  * information: RSS 2024 outstanding systems paper Stanford (Shuran Song)
+  * problem and position: portable and low-cost and in-the-wild robotics data collection by human
+  * method overview: soft-gripper with camera and IMU
+  * results: 
+    ![UMI_result](assets/2024/UMI_result.png)
+  * method details: 
+    * teleoperation high cost, human video large gap
+    * hand-held soft gripper, but with fisheye camera and side mirrors, GoPro IMU pose tracking, marker for width detection
+    * filtered unreachable data by forward kinematics
+    * raw fisheye images without undistortion as input
+    * reflecting the crops in the mirrors works better for policy learning
+    ![UMI_method1](assets/2024/UMI_method1.png)
+    * synchronized RGB images, relative gripper pose and width as inputs, delayed relative gripper pose and width as outputs
+    * Diffusion Policy imitation learning
+    ![UMI_method2](assets/2024/UMI_method2.png)
+
+* **Fast-Slow LLM Anomaly Detection** (**AESOP**)
+  * title and link: [Real-Time Anomaly Detection and Reactive Planning with Large Language Models](https://arxiv.org/abs/2407.08735)
+  * information: RSS 2024 outstanding paper Stanford
+  * problem and position: robotics anomaly detection
+  * method overview: fast-stage LLM embedding similarity with dataset to threshold anomaly, slow-stage LLM reasoning to select continue or any predefined recovery strategy, MPC with both nominal and recovery objective
+    ![AESOP_method](assets/2024/AESOP_method.png)
+  * results: not standard benchmark, self comparison
+
 * **Generative Image Dynamics** (**GID**)
   * title and link: [Generative Image Dynamics](https://arxiv.org/abs/2309.07906)
   * information: CVPR 2024 best paper Google
