Add SIGGRAPH and ICML 2024

--- a/2024.md
+++ b/2024.md
@@ -1,4 +1,61 @@
 # 2024
+* **GENerative Interactive Environments** (**Genie**)
+  * title and link: [Genie: Generative Interactive Environments](https://arxiv.org/abs/2402.15391)
+  * information: ICML 2024 best paper DeepMind
+  * problem and position: the first world model learning from action-unlabeled videos
+  * method overview: spatiotemporal video tokenizer, latent action model, dynamics model
+  * teaser: 
+    ![Genie_teaser1](assets/2024/Genie_teaser1.png)![Genie_teaser2](assets/2024/Genie_teaser2.png)
+  * results: experiments on 2D platformer games and robotics RT1
+    ![Genie_result1](assets/2024/Genie_result1.png)![Genie_result2](assets/2024/Genie_result2.png)
+  * method details: 
+    ![Genie_method1](assets/2024/Genie_method1.png)
+    ![Genie_method2](assets/2024/Genie_method2.png)
+    * video tokenizer is VQ-VAE-based to encode and decode video
+      ![Genie_method3](assets/2024/Genie_method3.png)
+    * latent action model is VQ-VAE-based, treat latent variable as action, limit $|A| = 8$, directly from pixels for better performance
+      ![Genie_method4](assets/2024/Genie_method4.png)
+    * dynamics model is a decoder-only MaskGIT on tokens with action additive instead of concat for better performance
+      ![Genie_method5](assets/2024/Genie_method5.png)
+    * first train video tokenizer, then co-train latent action model and dynamics model, inference discard latent action model with only action codebook
+    * all components use spatiotemporal Transformer for memory efficiency
+    * 11B parameters, most on 10.1B dynamics model, trained with 256 TPUv5p
+
+* **Video Poet** (**VideoPoet**)
+  * title and link: [VideoPoet: A Large Language Model for Zero-Shot Video Generation](https://arxiv.org/abs/2312.14125)
+  * information: ICML 2024 best paper Google
+  * problem and position: LLM-based video generation
+  * method overview: modality-specific tokenizers, decoder-only autoregressive Transformer, super-resolution Transformer
+  * teaser: 
+    ![VideoPoet_teaser](assets/2024/VideoPoet_teaser.png)
+  * results: 
+    ![VideoPoet_result1](assets/2024/VideoPoet_result1.png)![VideoPoet_result2](assets/2024/VideoPoet_result2.png)
+  * method details: 
+    * decoder-only Transformer backbone for autoregressive generation
+    * modality-specific tokenizers to map into unified space
+      * text: pretrained frozen T5 XL encoder
+      * image and video: MAGVIT-v2 tokenizer
+      * audio: pretrained SoundStream tokenizer
+    ![VideoPoet_method1](assets/2024/VideoPoet_method1.png)
+    * super-resolution Transformer with window attention
+      ![VideoPoet_method2](assets/2024/VideoPoet_method2.png)
+    * pretraining task mixture, finetune on text2video
+
+* **Stable Diffusion 3** (**SD3**)
+  * title and link: [Scaling Rectified Flow Transformers for High-Resolution Image Synthesis](https://arxiv.org/abs/2403.03206)
+  * information: ICML 2024 best paper Stability
+  * problem and position: improve rectified flow Transformers for text2image
+  * method overview: middle-frequent sampling for rectified flow, multi-modal DiT
+  * results: 
+    ![SD3_result1](assets/2024/SD3_result1.png)![SD3_result2](assets/2024/SD3_result2.png)
+    ![SD3_result3](assets/2024/SD3_result3.png)
+  * Rectified Flow forward process but with more frequent sampling for middle timesteps training
+  * MM-DiT builds upon DiT
+    ![SD3_method1](assets/2024/SD3_method1.png)![SD3_method2](assets/2024/SD3_method2.png)
+  * 8B parameters
+  * scaling law
+    ![SD3_method3](assets/2024/SD3_method3.png)
+
 * **Universal Manipulation Interface** (**UMI**)
   * title and link: [Universal Manipulation Interface: In-The-Wild Robot Teaching Without In-The-Wild Robots](https://arxiv.org/abs/2402.10329)
   * information: RSS 2024 outstanding systems paper Stanford (Shuran Song)
@@ -24,6 +81,17 @@
   * method overview: fast-stage LLM embedding similarity with dataset to threshold anomaly, slow-stage LLM reasoning to select continue or any predefined recovery strategy, MPC with both nominal and recovery objective
     ![AESOP_method](assets/2024/AESOP_method.png)
   * results: not standard benchmark, self comparison
+
+* **Generalized Winding Numbers** (**GWN**)
+  * title and link: [Robust Containment Queries over Collections of Rational Parametric Curves via Generalized Winding Numbers](https://arxiv.org/abs/2403.17371)
+  * information: SIGGRAPH 2024 best paper
+  * problem and position: extend point containment query to non-watertight 2D rational parametric curves by generalized winding numbers
+  * method overview: generalized winding numbers by winding angles, practical calculation by recursive closure with lines, coincidence by tangent
+    ![GWN_method1](assets/2024/GWN_method1.png)![GWN_method2](assets/2024/GWN_method2.png)
+    ![GWN_method3](assets/2024/GWN_method3.png)![GWN_method4](assets/2024/GWN_method4.png)
+    ![GWN_method5](assets/2024/GWN_method5.png)
+  * teaser: 
+    ![GWN_teaser](assets/2024/GWN_teaser.png)
 
 * **Generative Image Dynamics** (**GID**)
   * title and link: [Generative Image Dynamics](https://arxiv.org/abs/2309.07906)
