--- a/2024.md
+++ b/2024.md
@@ -1,4 +1,62 @@
 # 2024
+* **Visual AutoRegressive Modeling** (**VAR**)
+  * title and link: [Visual Autoregressive Modeling: Scalable Image Generation via Next-Scale Prediction](https://arxiv.org/abs/2404.02905)
+  * information: NeurIPS 2024 best paper ByteDance (Liwei Wang)
+  * problem and position: autoregressive style image generation beats diffusion
+  * method overview: redefine order as coarse-to-fine next-scale prediction
+  * teaser: 
+    ![VAR_teaser](assets/2024/VAR_teaser.png)
+  * results: beat diffusion, scaling law
+    ![VAR_result](assets/2024/VAR_result.png)
+  * method details: 
+    * VQGAN with modified multi-scale quantization layer to tokenize image into multi-scale token maps
+    * decoder-only Transformer like GPT-2 for next-scale prediction
+    ![VAR_method](assets/2024/VAR_method.png)
+
+* **Open-source VLA** (**OpenVLA**)
+  * title and link: [OpenVLA: An Open-Source Vision-Language-Action Model](https://arxiv.org/abs/2406.09246)
+  * information: CoRL 2024 outstanding paper finalist Stanford (Chelsea Finn, Percy Liang, Sergey Levine, Dorsa Sadigh, Russ Tedrake)
+  * problem and position: general VLA
+  * method overview: finetune VLM on robotic dataset
+  * results: beat RT-X when zero-shot or finetuning
+    ![OpenVLA_result](assets/2024/OpenVLA_result.png)
+  * method details: 
+    * finetune Prismatic-7B VLM, with 600M pretrained SigLIP and DINOv2 vision encoder, small MLP projector, 7B Llama 2 LLM
+    * train on Open X-Embodiment dataset
+    * 7B parameters, trained with 64 A100s for 14 days, inference 6Hz
+    * open source
+    ![OpenVLA_method](assets/2024/OpenVLA_method.png)
+
+* **From Speaker to Dubber** (**speaker2dubber**)
+  * title and link: [From Speaker to Dubber: Movie Dubbing with Prosody and Duration Consistency Learning](https://dl.acm.org/doi/10.1145/3664647.3680777)
+  * information: ACM MM 2024 best paper
+  * problem and position: two-stage movie dubbing
+  * method overview: first multi-task speaker pre-training, second prosody consistency learning and duration consistency reasoning
+    ![speaker2dubber_method](assets/2024/speaker2dubber_method.png)
+  * teaser: 
+    ![speaker2dubber_teaser](assets/2024/speaker2dubber_teaser.png)
+  * results: 
+    ![speaker2dubber_result](assets/2024/speaker2dubber_result.png)
+
+* **Harmonic Mobile Manipulation** (**HarmonicMM**)
+  * title and link: [Harmonic Mobile Manipulation](https://arxiv.org/abs/2312.06639)
+  * information: IROS 2024 best mobile manipulation paper AI2
+  * problem and position: end-to-end learning navigation and manipulation
+  * method overview: RGB images input and base+arm actions output, train by DD-PPO in ProcTHOR
+    ![HarmonicMM_method](assets/2024/HarmonicMM_method.png)
+  * results: 
+    ![HarmonicMM_result](assets/2024/HarmonicMM_result.png)
+
+* **Minimalist Vision** (**MinimalistVision**)
+  * title and link: [Minimalist Vision with Freeform Pixels](https://arxiv.org/abs/2501.00142)
+  * information: ECCV 2024 best paper Columbia
+  * problem and position: use smallest number of pixels to solve a lightweight vision task
+  * method overview: freeform pixels as the first layer of network for training, deployed by learned optical masks and photodetectors
+    ![MinimalistVision_method](assets/2024/MinimalistVision_method.png)
+  * teaser: 
+    ![MinimalistVision_teaser](assets/2024/MinimalistVision_teaser.png)
+  * results: 8 pixels for monitoring indoor spaces, measuring room lighting and estimating traffic flow
+
 * **GENerative Interactive Environments** (**Genie**)
   * title and link: [Genie: Generative Interactive Environments](https://arxiv.org/abs/2402.15391)
   * information: ICML 2024 best paper DeepMind
