--- a/2025.md
+++ b/2025.md
@@ -1,4 +1,65 @@
 # 2025
+* **Frequency-space Action Sequence Tokenization** (**FAST**)
+  * title and link: [FAST: Efficient Action Tokenization for Vision-Language-Action Models](https://arxiv.org/abs/2501.09747)
+  * information: RSS 2025 outstanding paper finalist Physical Intelligence (Chelsea Finn, Sergey Levine)
+  * problem and position: continuous-to-discrete action tokenization for LLM-like VLA
+  * method overview: transfer action chunks to frequency space and compress into tokens
+  * results: match diffusion VLA but more efficient to train
+    ![FAST_result1](assets/2025/FAST_result1.png)
+    ![FAST_result2](assets/2025/FAST_result2.png)
+  * method details: 
+    * naive tokenization is per-dimension per-timestep binning scheme, but can lead to trivial solution for action chunks as simply copying the most recent action token, also lead to many tokens
+    * use DCT to transform action chunk into frequency space, then use BPE to compress into tokens
+    * since BPE needs training for each dataset, train a universal action tokenizer across many datasets for 1-second action chunks
+    ![FAST_method](assets/2025/FAST_method.png)
+
+* **Reactive Diffusion Policy** (**RDP**)
+  * title and link: [Reactive Diffusion Policy: Slow-Fast Visual-Tactile Policy Learning for Contact-Rich Manipulation](https://arxiv.org/abs/2503.02881)
+  * information: RSS 2025 outstanding student paper finalist SJTU (Huazhe Xu, Cewu Lu)
+  * problem and position: hierarchical visual-tactile imitation learning
+  * method overview: teleoperation with tactile/force feedback shown in AR, slow vision latent diffusion policy and fast tactile/force reactive decoder
+  * teaser: 
+    ![RDP_teaser](assets/2025/RDP_teaser.png)
+  * results: 
+    ![RDP_result1](assets/2025/RDP_result1.png)![RDP_result2](assets/2025/RDP_result2.png)![RDP_result3](assets/2025/RDP_result3.png)
+  * method details: 
+    * use Quest3 to teleoperate, show tactile/force by AR
+    * encode tactile marker deformation field by PCA into a compact vector, encode force by directly using the 6D vector
+    * fast policy as VAE to encode real action chunk into latents, which can be decoded with high-freq tactile/force, < 1ms
+    * slow policy as Diffusion Policy on latent actions, ~100ms
+    * insight of separating slow-fast policy: fast policy’s asymmetric design of decoding with tactile/force feedback leaves reactive behaviors to fast policy decoding, while latent actions just care about general tendency instead of reactive behaviors
+    ![RDP_method](assets/2025/RDP_method.png)
+
+* **HumanOid STanding-up** (**HoST**)
+  * title and link: [Learning Humanoid Standing-up Control across Diverse Postures](https://arxiv.org/abs/2502.08378)
+  * information: RSS 2025 outstanding systems paper finalist Shanghai AI Lab (Jiangmiao Pang)
+  * problem and position: humanoid standing-up control from diverse postures
+  * method overview: train PPO in simulation with several techniques
+  * teaser: 
+    ![HoST_teaser](assets/2025/HoST_teaser.png)
+  * results: 
+    ![HoST_result](assets/2025/HoST_result.png)
+  * method details: 
+    * use PPO to train Unitree G1 in Isaac Gym
+      * observation as robot’s proprioceptive states
+      * action as delta joint angles
+    * use PD controller to track action as torque-based actuation
+    * divide into 3 stages as righting, rising and standing according to the height, activate different reward functions at each stage, and design 4 groups of reward functions, use multiple critics to balance
+      ![HoST_method](assets/2025/HoST_method.png)
+    * add pulling force in initial training and progressively decrease the magnitude, to help RL exploration challenge
+    * action scale to constrain violent motion and L2C2 loss for motion smoothness regularization
+    * design 4 terrains to diversify the starting postures
+    * use domain randomization for sim2real transfer
+
+* **MuJoCo Playground** (**MuJoCo-Playground**)
+  * title and link: [MuJoCo Playground](https://arxiv.org/abs/2502.08844)
+  * information: RSS 2025 outstanding demo paper UCBerkeley (Pieter Abbeel)
+  * problem and position: open-source infrastructure for robotics GPU RL
+  * method overview: build upon MuJoCo XLA for GPU simulation, integrate batch rendering with Madrona for GPU rendering, support DeepMind control suite and locomotion and manipulation environments with diverse robots
+  * teaser: 
+    ![MuJoCo-Playground_teaser](assets/2025/MuJoCo-Playground_teaser.png)
+  * results: whole pipeline from setup to training takes few minutes on a single GPU
+
 * **Visual Geometry Grounded Transformer** (**VGGT**)
   * title and link: [VGGT: Visual Geometry Grounded Transformer](https://arxiv.org/abs/2503.11651)
   * information: CVPR 2025 best paper Oxford
