--- a/2025.md
+++ b/2025.md
@@ -1,4 +1,11 @@
 # 2025
+* **Peer Review** (**PeerReview**)
+  * title and link: [Position: The AI Conference Peer Review Crisis Demands Author Feedback and Reviewer Rewards](https://arxiv.org/abs/2505.04966)
+  * information: ICML 2025 outstanding position paper
+  * problem and position: position on AI conference peer review
+  * method overview: call for authors’ evaluation on reviews and reviewers’ reward by reviews
+    ![PeerReview_method](assets/2025/PeerReview_method.png)
+
 * **Frequency-space Action Sequence Tokenization** (**FAST**)
   * title and link: [FAST: Efficient Action Tokenization for Vision-Language-Action Models](https://arxiv.org/abs/2501.09747)
   * information: RSS 2025 outstanding paper finalist Physical Intelligence (Chelsea Finn, Sergey Levine)
